# MarkovDayflow

./: .gitignore  QUICKSTART.md  README.md  example_usage.md  pyproject.toml
markov_dayflow/: __init__.py  __main__.py
markov_dayflow/adapters/: __init__.py  repositories.py
markov_dayflow/adapters/cli/: __init__.py  main.py
markov_dayflow/adapters/cli/commands/: config_commands.py  logging_commands.py  plan_commands.py  reporting_commands.py  task_commands.py
markov_dayflow/adapters/cli/formatters/: __init__.py  plan_formatter.py  task_formatter.py
markov_dayflow/adapters/visualization/: __init__.py  gantt_generator.py  pie_chart_generator.py
markov_dayflow/application/: __init__.py
markov_dayflow/application/usecases/: __init__.py  log_actual.py  plan_generation.py  reporting.py  weekly_reset.py
markov_dayflow/domain/: __init__.py
markov_dayflow/domain/entities/: __init__.py  block.py  plan.py  task.py  weekly_state.py
markov_dayflow/domain/exceptions/: __init__.py  security_exceptions.py
markov_dayflow/domain/services/: decay.py  focus_blocks.py  preemptor.py  sampler.py  scoring.py
markov_dayflow/domain/value_objects/: __init__.py  task_size.py  task_status.py
markov_dayflow/infrastructure/: __init__.py
markov_dayflow/infrastructure/config/: __init__.py  blocks_config.yaml  config.py
markov_dayflow/infrastructure/utils/: __init__.py  utils.py
